[gd_scene load_steps=5 format=3 uid="uid://cntljr72fl7i0"]

[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="1_qwtjx"]
[ext_resource type="Script" path="res://pages/editor/layer_panel/LayerPanel.gd" id="1_vw7vn"]
[ext_resource type="PackedScene" uid="uid://cfsddu7uhkrp5" path="res://pages/editor/layer_panel/LayerRow.tscn" id="2_urqxs"]
[ext_resource type="PackedScene" uid="uid://c6hg56c7sf73m" path="res://pages/editor/layer_panel/NumberPicker.tscn" id="4_45vqc"]

[node name="LayerPanel" type="Node2D"]
script = ExtResource("1_vw7vn")

[node name="Panel" type="Panel" parent="."]
offset_right = 400.0
offset_bottom = 469.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_right = 408.0
offset_bottom = 400.0
horizontal_scroll_mode = 0

[node name="RowHolder" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="LayerRow2" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="LayerRow" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="LayerRow3" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="LayerRow4" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="LayerRow5" parent="ScrollContainer/RowHolder" instance=ExtResource("2_urqxs")]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="."]
offset_left = 248.0
offset_top = 405.0
offset_right = 387.0
offset_bottom = 457.0
theme = ExtResource("1_qwtjx")
theme_override_font_sizes/font_size = 16
text = "X"

[node name="NewButton" type="Button" parent="."]
offset_left = 14.0
offset_top = 405.0
offset_right = 150.0
offset_bottom = 457.0
theme = ExtResource("1_qwtjx")
theme_override_font_sizes/font_size = 16
text = "+"

[node name="RotationPicker" parent="." instance=ExtResource("4_45vqc")]
position = Vector2(3, 482)

[node name="DepthPicker" parent="." instance=ExtResource("4_45vqc")]
position = Vector2(1, 545)
